force-app/main/default/objects/Mail_Import__c/Mail_Import__c.object-meta.xml
<CustomObject>
    <label>Mail Import</label>
    <nameField>
        <label>Mail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mail Import</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>