force-app/main/default/objects/Mail_Import__c/fields/Beneficiary__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Beneficiary</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Mail Import</relationshipLabel>
    <relationshipName>Mail_Import</relationshipName>
    <type>Lookup</type>
</CustomField>