force-app/main/default/objects/Mail_Import__c/fields/Check_Log__c.field-meta.xml
<CustomField>
    <fullName>Check_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Check Log</label>
    <referenceTo>Check_Log__c</referenceTo>
    <relationshipLabel>Mail Import</relationshipLabel>
    <relationshipName>Mail_Import</relationshipName>
    <type>Lookup</type>
</CustomField>