force-app/main/default/objects/Mail_Import__c/fields/Docsumo_Document_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Docsumo_Document_Created_Date__c</fullName>
    <label>Docsumo Document Created Date</label>
    <type>DateTime</type>
</CustomField>