force-app/main/default/objects/Mail_Import__c/fields/Docsumo_Document_ID__c.field-meta.xml
<CustomField>
    <fullName>Docsumo_Document_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Docsumo Document ID</label>
    <length>60</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>