force-app/main/default/objects/Mail_Import__c/fields/Docsumo_Document_Name__c.field-meta.xml
<CustomField>
    <fullName>Docsumo_Document_Name__c</fullName>
    <label>Docsumo Document Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>