force-app/main/default/objects/Mail_Import__c/fields/Docsumo_Document_Status__c.field-meta.xml
<CustomField>
    <fullName>Docsumo_Document_Status__c</fullName>
    <label>Docsumo Document Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reviewing</fullName>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
            <value>
                <fullName>Review_skipped</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>