force-app/main/default/objects/Mail_Import__c/fields/Docsumo_Document_URL__c.field-meta.xml
<CustomField>
    <fullName>Docsumo_Document_URL__c</fullName>
    <label>Docsumo Document URL</label>
    <type>Url</type>
</CustomField>