force-app/main/default/objects/Mail_Import__c/fields/Mail_Import_Audience__c.field-meta.xml
<CustomField>
    <fullName>Mail_Import_Audience__c</fullName>
    <label>Mail Import Audience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CFPD</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>