force-app/main/default/objects/Mail_Import__c/fields/Mail_Import_Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Mail_Import_Document_Type__c</fullName>
    <label>Mail Import Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>us_cheque</fullName>
                <label>Check</label>
            </value>
            <value>
                <fullName>Contracts</fullName>
            </value>
            <value>
                <fullName>Court Documents</fullName>
            </value>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>Statements - Banks</fullName>
            </value>
            <value>
                <fullName>Statements - SSA</fullName>
            </value>
            <value>
                <fullName>Tax Document</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>