force-app/main/default/objects/Mail_Import__c/fields/Service_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Service_Enrollment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Enrollment</label>
    <referenceTo>Service_Enrollment__c</referenceTo>
    <relationshipLabel>Mail Import</relationshipLabel>
    <relationshipName>Mail_Import</relationshipName>
    <type>Lookup</type>
</CustomField>