force-app/main/default/objects/Mail_Import__c/fields/Trust__c.field-meta.xml
<CustomField>
    <fullName>Trust__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trust</label>
    <referenceTo>Trust__c</referenceTo>
    <relationshipLabel>Mail Import</relationshipLabel>
    <relationshipName>Mail_Import</relationshipName>
    <type>Lookup</type>
</CustomField>